# Course_work_2

./: .flake8  main.py  pyproject.toml
data/: data.json
src/: classes.py  utils.py
tests/: conftest.py  test_aeroplane.py  test_api_adapter.py  test_json_saver.py  test_main.py  test_utils.py
