[project]
name = "course-work-2"
version = "0.1.0"
description = ""
authors = [
    {name = "-TokyoGhoul-",email = "0hellnomad0@gmail.com"}
]
requires-python = "^3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "mypy (>=2.1.0,<3.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py           # Также отдельно исключить файл с именем foo.py
                     # в корне проекта
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = "(tests|venv|build)"

[tool.isort]
line_length = 119